# computer-mcp

./: .dockerignore  .sprite  .sprite-pr-smoke-20260321100247.txt  .sprite-pr-smoke-20260321100509.txt  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.runpod  LICENSE  README.md  apply-patch-api-reference.md
.agents/gg/: lead-readme.md
.agents/skills/runpod-deployment/: SKILL.md
.agents/skills/runpod-deployment/agents/: openai.yaml
.agents/skills/sprites/: SKILL.md
.github/workflows/: container-release.yml  release.yml
docker/: computer-mcp-devtools.sh  runpod-bootstrap.sh  runpod-entrypoint.sh  runpod-run.sh
docs/: agent-sprites-setup-runbook.md  agent-vps-setup-runbook.md  deployment-notes.md  github-app-agent-auth.md  runpod-container-template.md  runpod-deployment.md
gg/agent-outputs/: computer-cli-quickstart-for-agents.md  computer-core-http-cli-implementation-plan-2026-03-19.md  computer-core-http-cli-migration-spec.md  computer-mcp-concurrent-session-broker-plan-2026-03-21.md  computer-mcp-v1-design-spec.md  offline-agent-git-bundle-workflow.md  sprite-services-lifecycle-handoff-plan-2026-03-21.md
scripts/: agent-create-pr.sh  github_actions_fail_fast.py  install.sh  mint-gh-app-installation-token.sh  protect-main-branch.sh  runpod_api.py  setup-sprite.sh  sprite-services.sh  upgrade-sprite.sh
src/: apply_patch.rs  client.rs  config.rs  http_api.rs  lib.rs  protocol.rs  publisher.rs  redaction.rs  server.rs  service.rs  session.rs
tests/: github_app_scripts.rs  install_script.rs  phase6_cli_parity.rs  sprite_scripts.rs
