[package]
name = "computer-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "computer-mcp"
path = "src/bin/computer-mcp.rs"

[[bin]]
name = "computer-mcpd"
path = "src/bin/computer-mcpd.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.30", features = ["signal", "process", "term"] }
rand = "0.10"
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4"
