[package]
name = "computer-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "computer-mcp"
path = "src/bin/computer-mcp.rs"

[[bin]]
name = "computer-mcpd"
path = "src/bin/computer-mcpd.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive"] }
codex-apply-patch = { git = "https://github.com/openai/codex.git", rev = "a265d6043edc8b41e42ae508291f4cfb9ed46805" }
nix = { version = "0.30", features = ["signal", "process", "term"] }
rand = "0.10"
rcgen = "0.14"
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.14"
